# python-2022-spbu

./: .gitignore  pyproject.toml  task_1.ipynb  task_2.ipynb  task_3.ipynb
