[tool.poetry]
name = "python-2022-spbu"
version = "0.1.0"
description = ""
authors = ["Katun Ilya <katun.ilya@gmail.com>"]
readme = "README.md"
packages = [{include = "python_2022_spbu"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
folium = "^0.14.0"
colour = "^0.1.5"
geopandas = "^0.12.2"
seaborn = "^0.12.2"
toolz = "^0.12.0"
cython = "^0.29.33"
numba = "^0.56.4"
sympy = "^1.11.1"
wolframalpha = "^5.0.0"
mpmath = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
